--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -155,6 +155,7 @@
 
   .hero--inner-page {
     position: relative;
+
     padding-top: 34px;
     padding-bottom: 78px;
 
@@ -215,5 +216,58 @@
   .hero__icon--toy {
     margin-top: 5px;
     margin-right: 34px;
+  }
+}
+
+// ---------- DESKTOP ----------
+
+@media (min-width: $desktop-width) {
+  // Стили блока для главной страницы
+  .hero--main-page {
+    padding-top: 92px;
+
+    background-image: url("../img/hero-desktop@1x.jpg");
+  }
+
+  .hero--main-page::after,
+  .hero--inner-page::after {
+    bottom: -19px;
+
+    height: 34px;
+  }
+
+  // Стили для внутренних страц
+
+  // .hero--inner-page {
+  //   position: relative;
+  //   padding-top: 34px;
+  //   padding-bottom: 78px;
+
+  //   background-color: #f1f1f1;
+  // }
+
+  // Заголовок
+
+  .hero__title {
+    margin-bottom: 359px;
+
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  // .hero__title--inner-page {
+  //   margin-bottom: 0;
+  // }
+
+  // Ссылка-блок
+
+  .hero__link {
+    min-height: 117px;
+
+    &:hover,
+    &:focus {
+      margin-top: -5px;
+      min-height: 122px;
+    }
   }
 }
