--- a/source/sass/blocks/datasheet.scss
+++ b/source/sass/blocks/datasheet.scss
@@ -10,17 +10,17 @@
 .datasheet__cell {
   @include border(bottom);
 
-  padding-top: 10px;
+  padding-top: 8px;
   padding-bottom: 11px;
 
-  line-height: 1.2;
+  line-height: 20px;
 }
 
 .datasheet__cell--width {
   width: 100px;
 }
 
-// TABLET
+// ---------- TABLET ----------
 
 @media (min-width: $tablet-width) {
   .datasheet {
@@ -31,3 +31,11 @@
     width: 95px;
   }
 }
+
+// ---------- DESKTOP ----------
+
+// @media (min-width: $desktop-width) {
+//   .datasheet {
+//     margin-bottom: 28px;
+//   }
+// }
