--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -77,11 +77,10 @@
   text-align: center;
 }
 
-// TABLET
+// ---------- TABLET ----------
 
 @media (min-width: $tablet-width) {
   // Svg полоса внизу блока
-  // TODO
   .featured::after {
     width: 100%;
     height: 17px;
@@ -159,6 +158,96 @@
   .featured__buy {
     width: 50%;
     padding-right: 44px;
+  }
+
+  .featured__price {
+    margin-bottom: 34px;
+
+    font-size: 20px;
+    text-align: center;
+  }
+}
+
+// ---------- DESKTOP ----------
+
+@media (min-width: $desktop-width) {
+  .featured {
+    width: 1150px;
+    margin: 0 auto;
+  }
+
+  // Svg полоса внизу блока
+  .featured::after {
+    margin-left: 50px;
+    margin-right: 50px;
+    width: auto;
+    height: 23px;
+
+    background-size: auto 23px;
+  }
+
+  // Обертка для контента блока
+
+  .featured__content {
+    padding-top: 126px;
+    padding-bottom: 74px;
+  }
+
+  // Заголовок
+
+  .featured__title {
+    position: relative;
+    z-index: 21;
+
+    justify-content: flex-start;
+    margin-bottom: 44px;
+  }
+
+  .featured__name {
+    order: 2;
+    margin-bottom: 5px;
+    margin-left: -3px;
+
+    font-size: 53px;
+    line-height: 57px;
+    letter-spacing: -2.3px; // Проблема с заголовком !!! Сделать Pixer Perfect не получается.
+  }
+
+  .featured__marker {
+    order: 1;
+    margin-right: 56px;
+    margin-left: 46px;
+  }
+
+  // Описание
+
+  .featured__info {
+    width: 30%;
+    margin-bottom: 109px;
+    margin-left: 175px;
+    padding-right: 23px;
+  }
+
+  .featured__description {
+    min-height: 90px;
+    margin-bottom: 48px;
+  }
+
+  // Картинка
+
+  .featured__picture {
+    position: absolute;
+    top: 73px;
+    z-index: 20;
+    // right: 51px;
+  }
+
+  // Блок цены
+
+  .featured__buy {
+    width: 30%;
+    margin-left: 175px;
+    padding-right: 23px;
   }
 
   .featured__price {
