--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -121,6 +121,7 @@
 
   .product {
     display: flex;
+    width: 100%;
   }
 
   // Картинка
@@ -133,6 +134,7 @@
 
   .product__wrapper {
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
     width: 50%;
     padding-right: 26px;
@@ -184,5 +186,34 @@
 
   .product__order {
     margin-bottom: 4px;
+  }
+}
+
+// ---------- DESKTOP ----------
+
+@media (min-width: $desktop-width) {
+  // Изменение раскладки блока
+
+  .product {
+    flex-direction: column;
+    width: 316px;
+  }
+
+  // Обертка описания товара с ценой
+
+  .product__wrapper {
+    width: 100%;
+  }
+
+  // Обертка для названи я описания
+
+  .product__info {
+    padding-bottom: 14px;
+  }
+
+  // Обертка для цены и кнопки
+
+  .product__buy {
+    padding-left: 0;
   }
 }
