Стилизовал блок main для catalog.html для desktop

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -3,5 +3,13 @@
 }
 
 .main--catalog {
-  padding-bottom: 57px;
+  padding-bottom: 63px;
+}
+
+// ---------- DESKTOP ----------
+
+@media (min-width: $desktop-width) {
+  .main--catalog {
+    padding-bottom: 103px;
+  }
 }
