--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -258,6 +258,17 @@
     padding-left: 0;
   }
 
+  .navigation__logo-link {
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
   // Обертки списков навигации
 
   .navigation__wrapper-top {
