--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,3 +2,13 @@
 
 $primary-text: #000000;
 $secondary-text: #444444;
+
+// Width
+
+$tablet-width: 768px;
+$desktop-width: 1150px;
+
+// Padding
+
+$mobile-padding: 30px;
+$tablet-padding: 50px;
