--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -171,8 +171,9 @@
   // Блок с контактными данными
 
   .contacts__info {
-    margin-left: 175px;
-    padding-left: 0;
+    width: 50%;
+    padding-right: 10px;
+    padding-left: 175px;
     padding-top: 141px;
     padding-bottom: 49px;
   }
@@ -196,6 +197,12 @@
 
   .contacts__data {
     flex-direction: column;
+  }
+
+  // Контактные данные
+
+  .contacts__row {
+    width: 100%;
   }
 
   // Карта
