--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,9 +1,11 @@
 // Общие стили блока
 
 .footer {
-  @include layout-padding($mobile-padding);
-
   background-color: #f1f1f1;
+}
+
+.footer__wrapper {
+  @include layout-padding($mobile-padding);
 }
 
 // Лого
@@ -63,9 +65,8 @@
 @media (min-width: $tablet-width) {
   // Общие стили блока
 
-  .footer {
+  .footer__wrapper {
     @include layout-padding($tablet-padding);
-
     display: flex;
     justify-content: space-between;
     align-items: center;
