--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -222,6 +222,7 @@
   background-color: transparent;
   border: none;
   border-bottom: 2px solid #000000;
+  outline: none;
 
   &:hover,
   &:focus {
