--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -258,7 +258,7 @@
     padding-left: 0;
   }
 
-  .navigation__logo-link {
+  .navigation__logo-link[href] {
     &:hover,
     &:focus {
       opacity: 0.6;
