--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -16,7 +16,8 @@
   background-color: transparent;
   border: 2px solid $secondary-text;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: #ffffff;
 
     background-color: $secondary-text;
