--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,7 +1,34 @@
 .header {
-  background-color: #f9f9f9;
+  position: relative;
 
-  &--inner-page {
-    background-color: #f1f1f1;
+  background-color: #ffffff;
+}
+
+// ---------- TABLE ----------
+
+@media (min-width: $tablet-width) {
+  .header::after {
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    left: 0;
+
+    width: 100%;
+    height: 24px;
+
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-repeat: repeat-x;
+    background-position: 0 0;
+    background-size: contain;
+  }
+}
+
+// ---------- TABLE ----------
+
+@media (min-width: $desktop-width) {
+  .header::after {
+    bottom: -19px;
+
+    height: 34px;
   }
 }
