--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -1,16 +1,16 @@
 // Svg полоса внизу блока
 
 .featured::after {
+  @include center(400);
   content: "";
 
   display: block;
-  width: 100%;
   height: 6px;
 
   background-image: url("../img/bg-zigzag-line.svg");
   background-repeat: repeat-x;
-  background-position: 50% 0;
-  background-size: contain;
+  background-position: 0 0;
+  background-size: auto 6px;
 }
 
 // Обертка для контента блока
@@ -87,7 +87,8 @@
 @media (min-width: $tablet-width) {
   // Svg полоса внизу блока
   .featured::after {
-    width: 100%;
+    @include center(768);
+
     height: 17px;
 
     background-size: auto 17px;
@@ -181,9 +182,8 @@
   // Svg полоса внизу блока
 
   .featured::after {
-    margin-left: 50px;
-    margin-right: 50px;
-    width: auto;
+    @include center(1050);
+
     height: 23px;
 
     background-size: auto 23px;
