--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,22 +1,24 @@
 // Svg полоса внизу блока
 
 .reviews::after {
+  @include center(400);
+
   content: "";
 
   display: block;
-  width: 100%;
   height: 6px;
 
   background-image: url("../img/bg-zigzag-line.svg");
   background-repeat: repeat-x;
-  background-position: 50% 0;
-  background-size: contain;
+  background-position: 0 0;
+  background-size: auto 6px;
 }
 
 // Обертка для контента блока
 
 .reviews__content {
   @include layout-padding($mobile-padding);
+  @include center(400);
 
   padding-top: 16px;
   padding-bottom: 45px;
@@ -68,6 +70,7 @@
 
 .reviews__toggles {
   @include margin-clean;
+  @include center(260);
 
   display: flex;
   margin-bottom: 38px;
@@ -103,6 +106,8 @@
   // Фон блока
 
   .reviews {
+    @include center(768);
+
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -111,6 +116,8 @@
   // Svg полоса внизу блока
 
   .reviews::after {
+    @include center(768);
+
     height: 17px;
 
     background-size: auto 17px;
@@ -120,6 +127,7 @@
 
   .reviews__content {
     @include layout-padding($tablet-padding);
+    @include center(768);
 
     display: flex;
     flex-direction: row;
@@ -211,15 +219,14 @@
 
 @media (min-width: $desktop-width) {
   .reviews {
-    // width: 1150px;
-    margin-left: 50px;
-    margin-right: 50px;
+    @include center(1050);
   }
 
   // Svg полоса внизу блока
 
   .reviews::after {
-    width: auto;
+    @include center(1050);
+
     height: 23px;
 
     background-size: auto 23px;
@@ -228,19 +235,20 @@
   // Обертка для контента блока
 
   .reviews__content {
-    padding-top: 71px;
-    padding-bottom: 133px;
-    padding-right: 0;
+    max-width: none;
     margin-left: 125px;
+    padding-top: 71px;
+    padding-right: 0;
+    padding-bottom: 133px;
   }
 
   // Заголовок
 
   .reviews__title {
+    margin-bottom: 48px;
+
     font-size: 53px;
     line-height: 57px;
-
-    margin-bottom: 48px;
   }
 
   // Текст отзыва
@@ -253,7 +261,7 @@
   // Кнопка
 
   .reviews__write {
-    margin-top: 8px;
     width: 175px;
+    margin-top: 8px;
   }
 }
