--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,8 +1,8 @@
 // Общие стили блока и тень
 
 .video {
-  margin-right: $mobile-padding;
-  margin-left: $mobile-padding;
+  @include center(260);
+
   padding-bottom: 33px;
 
   border: 1px solid #ececec;
@@ -99,10 +99,10 @@
   // Общие стили блока и тень
 
   .video {
+    @include center(668)
+
     display: flex;
     flex-direction: column;
-    margin-right: $tablet-padding;
-    margin-left: $tablet-padding;
     padding-bottom: 45px;
   }
 
@@ -157,6 +157,8 @@
   // Общие стили блока и тень
 
   .video {
+    @include center(1050);
+
     position: relative;
 
     align-items: flex-end;
@@ -168,7 +170,6 @@
 
   .video__title {
     flex-direction: column;
-    // justify-content: flex-start;
     align-items: flex-start;
     width: 350px;
     padding-top: 16px;
@@ -183,8 +184,9 @@
   }
 
   .video__title-text {
-    font-size: 20px;
     padding-left: 8px;
+
+    font-size: 20px;
   }
 
   // Видео-плеер картинка
