Исправил ошибку в video.scss

--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -99,7 +99,7 @@
   // Общие стили блока и тень
 
   .video {
-    @include center(668)
+    @include center(668);
 
     display: flex;
     flex-direction: column;
