--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -75,8 +75,26 @@
   margin-bottom: 42px;
 }
 
-.contacts__map-image {
+.contacts__map-picture {
+  position: relative;
+
+  display: block;
+  width: 320px;
   margin: 0 auto;
+}
+
+.contacts__map-picture::after {
+  content: "";
+  position: absolute;
+  top: 144px;
+  left: 140px;
+
+  width: 67px;
+  height: 100px;
+
+  background-image: url("../img/icon-map-pin.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 // Кнопка
@@ -155,6 +173,15 @@
     margin-bottom: 55px;
   }
 
+  .contacts__map-picture {
+    width: 768px;
+  }
+
+  .contacts__map-picture::after {
+    top: 139px;
+    left: 363px;
+  }
+
   // Кнопка
 
   .contacts__write-us {
@@ -173,8 +200,6 @@
     position: relative;
 
     padding-bottom: 105px;
-    // margin-left: 50px;
-    // margin-right: 50px;
   }
 
   // Блок с контактными данными
@@ -224,6 +249,15 @@
     right: 0;
 
     margin: 0;
+  }
+
+  .contacts__map-picture {
+    width: 525px;
+  }
+
+  .contacts__map-picture::after {
+    top: 147px;
+    left: 238px;
   }
 
   // Кнопка
