--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -73,7 +73,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 143px;
+    height: 143px; // for IE
   }
 
   // Лого
@@ -104,6 +104,10 @@
 // ---------- DESKTOP ----------
 
 @media (min-width: $desktop-width) {
+  .footer {
+    // display: flex;
+  }
+
   .footer__wrapper {
     @include center(1150);
   }
