--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -162,6 +162,7 @@
     position: relative;
 
     align-items: flex-end;
+    min-height: 457px; // IE fix;
     padding-top: 25px;
     padding-bottom: 61px;
   }
