--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,11 @@ $secondary-text: #444444;
 $tablet-width: 768px;
 $desktop-width: 1150px;
 
+// Pixels
+
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
+
 // Padding
 
 $mobile-padding: 30px;
